--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Treebook2</title>
+  <title>Treebook</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
+<div class="navbar navbar-fixed-top">
+<div class="navbar-inner">
+<div class="container">
+<a href="#" class="brand">Treebook</a>
+<ul class="nav">
+<li><%=  link_to "All Statuses", statuses_path %></li>
+</ul>
 
+</div>
+</div>
+</div>
 <%= yield %>
+</div>
 
 </body>
 </html>
