--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
 <div class="navbar navbar-fixed-top">
 <div class="navbar-inner">
 <div class="container">
@@ -19,6 +18,9 @@
 </div>
 </div>
 </div>
+<div class="container">
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
 </div>
 
