--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,21 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+<div class="row">
+<div class="span4">
+<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post },html: {class: "well"}) do |f| %>
   <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
+<fieldset>
+	<legend>Forgot your password?</legend>
+  <div><%= f.input :email %></div>
+  <div><%= f.button :submit, "Send me reset password instructions" %></div>
+  </fieldset>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+<div class="span8">
+	<h3>
+Sorry to hear you forgot your password.<br />
+With this form we can help you reset it.<br />
+</h3>
+</div>
+
+</div>
